2010-03-15  Alan McGovern  <amcgovern@novell.com>

	* misc/Parsing/MiscParsing.cs: Fix some bugs in our handling
	  of both quoted characters and trailing whitespace when
	  parsing bindings.

2010-03-15  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ToolTipServiceTest.cs: Add tests for
	  the last change to make the Tooltip properties custom DPs
	  instead of core DPs. We pass these now because the DP is
	  custom.

2010-03-12  Alan McGovern  <amcgovern@novell.com>

	* misc/Parsing/MiscParsing.cs: Spaces aren't a terminating
	  character for segments in a binding expression, only '}' and
	  ',' appear to indicate the end of a segment. Fixes the new
	  moon-unit testcase and appears to regress nothing.

2010-03-12  Alan McGovern  <amcgovern@novell.com>

	* misc/Parsing/MiscParsing.cs: Add a bunch of extra tests to
	  check how attached properties are handled by the parser.
	  Also correct the tests for escaped markup so that they pass
	  on Silverlight.

2010-03-11  Mario Carrion  <mcarrion@novell.com>

	* System.Windows.Automation.Peers/ItemAutomationPeerTest.cs: Testing
	ItemsSource.

2010-03-11  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Net.Browser/WebRequestCreatorTest.cs: Uncomment assertion.
	We now match MS implementation type name for the browser stack.

2010-03-10  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows/DependencyPropertyTest.cs: Add test cases to confirm
	that DefaultValue cannot be used tp create a [SecurityCritical] type

2010-03-10  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/BindingTest.cs: Correctly handle the
	  case where an indexed Binding is attached before the
	  collection has been initialized.

2010-03-10  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ItemsControlTest.cs: Add tests to
	  see whether or not the container is in the panel when
	  PrepareContainer and ClearContainer are called.

2010-03-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>
